# 2DRoboPrac_ws

./: .gitignore  .gitmodules  README.md  map_1701241980.yaml
CAD/: 2DRoboPrac.ipj  Drawing1.dwg  Plate_5mmforPrint.ipt  backPlate.ipt  bottomCNC.iam  bottomLayer.iam  frontPlate.ipt  left_ASP.ipt  right_ASP.ipt
CAD/data/: Harurobo2024field.blend
CAD/data/robo/: model.config  model.sdf
CAD/資料/CADファイル/: Plate5mmforPrint2.ipt  Plate5mmforPrint2.stl  Plate_5mmforPrint.stl  plate_5mm.stl  車体設計例.stp
CAD/資料/CNC/: bottomLayer3mmdrill.cnc  bottomLayer3mmmill.cnc  bottomLayerBFPlate.cnc
CAD/資料/車体設計例/: 2022education_linefollower.iam  COMPOUND.ipt  D_DO-41_SOD81_P10.16mm_Horizontal.iam  H2.ipt  LED_D5.0mm_Clear.iam  PinHeader_1x06_P2.54mm_Vertical.iam  PinSocket_1x09_P2.54mm_Vertical.iam  PinSocket_1x15_P2.54mm_Vertical.iam  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal.iam  SOLID.ipt  SOLID_1.ipt  SOLID_2.ipt  SOLID_3.ipt  SOLID_4.ipt  SOLID_5.ipt  TAMIYA_DoubleGearBox.iam  TAMIYA_ballcaster_35mm.iam  ball_holder.ipt  basis.ipt  body_plate.ipt  circit_plate.ipt  gearbox.ipt  plate_5mm.ipt  shaft.ipt  spacer_10mm.ipt  spacer_20mm.ipt  spacer_circit.ipt  ナロータイヤゴム.ipt  ナロータイヤセット.iam  ナロータイヤホイール.ipt  ナロータイヤホイールハブ.ipt  基盤.ipt  車体設計例.iam
CAD/資料/車体設計例/OldVersions/: H2.0001.ipt  ball_holder.0001.ipt  basis.0001.ipt  gearbox.0001.ipt  plate_5mm.0002.ipt  shaft.0001.ipt  ナロータイヤゴム.0001.ipt  ナロータイヤホイール.0001.ipt  ナロータイヤホイールハブ.0001.ipt  車体設計例.0002.iam
CAD/資料/３Dプリンター/: Plate5mmforPrint2.fpp  Plate5mmforPrint2.gx  plate_5mm.fpp  plate_5mm.gx
gz_ws/MakeYourRobot/models/: world.sdf
gz_ws/MakeYourRobot/models/meshes/: 2DRoboPrac.stl
gz_ws/MoveTheRobot/models/: world.sdf
gz_ws/models/: world.sdf
gz_ws/models/measurement/: model.config  model.sdf
gz_ws/test/: WorldDemo.sdf
install/: local_setup.sh  setup.sh
install/key_event_msgs/share/key_event_msgs/: local_setup.sh  package.bash  package.sh
install/key_event_nodes/share/key_event_nodes/: local_setup.sh  package.sh
install/nav_dev/lib/nav_dev/: lidar_node
install/nav_dev/share/nav_dev/: local_setup.sh  package.dsv  package.sh  package.xml
install/nav_dev/share/nav_dev/config/: ros_gz_bridge.yaml
install/nav_dev/share/nav_dev/launch/: nav_slam.launch.py
install/nav_dev/share/nav_dev/models/field/: model.config
log/: latest_build
ros2_ws/: test_map2.yaml  test_map3.data  test_map3.pgm  test_map3.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/cpp_topic_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_topic_pubsub/msg/: PracticeMsg.msg
ros2_ws/src/cpp_topic_pubsub/src/: publisher_node.cpp
ros2_ws/src/custom_test_msgs/install/: setup.sh
ros2_ws/src/custom_test_msgs/log/: latest_build
ros2_ws/src/drive_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/drive_msgs/msg/: DiffDriveEnc.msg  OmniEnc.msg
ros2_ws/src/drive_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/drive_pkg/config/: params.yaml
ros2_ws/src/drive_pkg/launch/: diff_drive.launch.py
ros2_ws/src/drive_pkg/src/: diff_drive_node.cpp  simple_dd_node.cpp
ros2_ws/src/gazebo_world/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_world/launch/: gazebo_world.launch.py
ros2_ws/src/gazebo_world/worlds/: display_stl.sdf
ros2_ws/src/ign_template/: CMakeLists.txt
ros2_ws/src/ign_template/launch/: basic_world1.launch.py
ros2_ws/src/ign_template/src/: teleop_node.cpp
ros2_ws/src/ignition_lecture/: CMakeLists.txt  package.xml
ros2_ws/src/ignition_lecture/launch/: basic_world1.launch.py
ros2_ws/src/ignition_lecture/worlds/: basic_world1.sdf
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tf2_cpp/launch/: turtle_tf2_demo.launch.py
ros2_ws/src/learning_tf2_cpp/src/: static_turtle_tf2_broadcaster.cpp
ros2_ws/src/nav_dev/: CMakeLists.txt  package.xml
ros2_ws/src/nav_dev/config/: lidar_bridge.yaml  lidar_robo.rviz  nav2_sample.rviz  nav_slam.rviz  nav_slam.yaml  nav_teleop.yaml  ros_gz_bridge.yaml  slam.rviz  teleop_bridge.yaml  turtle_nav2.rviz
ros2_ws/src/nav_dev/launch/: model_test.launch.py  nav_dev.launch.py  nav_localization.launch.py  nav_nav2.launch.py  nav_rviz.launch.py  nav_slam.launch.py  nav_slam2.launch.py  nav_spawn.launch.py  nav_teleop.launch.py  nav_turtle.launch.py  navigation2.launch.py  robot_state_publisher.launch.py  ros_ign_bridge.launch.py  simulation.launch.py  turtle_nav2.launch.py
ros2_ws/src/nav_dev/maps/: map_1701241980.pgm
ros2_ws/src/nav_real/: CMakeLists.txt  package.xml
ros2_ws/src/nav_real/config/: params.yaml  teleop.rviz
ros2_ws/src/nav_real/launch/: diff_drive.launch.py  diff_nav2.launch.py  diff_slam.launch.py  diff_teleop.launch.py  raspi.launch.py  remote_slam.launch.py  teleop_remote.launch.py
ros2_ws/src/nav_real/src/: counter_node.cpp  dammy_encorder_node.cpp  diff_drive_node.cpp  joint_pub_node.cpp  joy_transrate_node.cpp  raspi_node.cpp  simple_dd_node.cpp  states_pub_node.cpp  test_pub_node.cpp
ros2_ws/src/navigation/: package.xml
ros2_ws/src/omni_control/: CMakeLists.txt  package.xml
ros2_ws/src/omni_control/config/: omni_params.yaml  omni_teleop.rviz
ros2_ws/src/omni_control/launch/: omni_raspi.launch.py  omni_teleop.launch.py
ros2_ws/src/omni_control/src/: omni_drive_node.cpp  omni_hardware_node.cpp  omni_joy_node.cpp  omni_raspi_node.cpp  omni_states_node.cpp
ros2_ws/src/rviz_test/: CMakeLists.txt
ros2_ws/src/tf2_real/: CMakeLists.txt  package.xml
ros2_ws/src/type_drive_msgs/: CMakeLists.txt  package.xml
stm_ws/: .cproject  .gitignore  .project  OmniPrac.ioc
stm_ws/2DRoboPrac/: .cproject  .mxproject  .project  2DRoboPrac Debug.launch  2DRoboPrac.ioc
stm_ws/2DRoboPrac/Debug/: 2DRoboPrac.elf  2DRoboPrac.list  2DRoboPrac.map  makefile  objects.list  objects.mk  sources.mk
stm_ws/Core/Src/: can.c  main.c
stm_ws/OmniPrac/: .cproject  CMakeLists.txt  OmniPrac.ioc
stm_ws/OmniPrac/cmake/: st-project.cmake
sub_launch/: robot_state_publisher.launch.py
uros_ws/: .gitignore
uros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
uros_ws/log/: latest_build
(+339 files in other folders)
